DOMjudge Programming Contest Judging System

Version 5.3.0 - DEV
-------------------
 - Add support for Kotlin by mounting /bin in chroot environment.
 - Add options to have second scoreboard resolution and to suppress
   problem information from the scoreboard. Thanks Marc Furon.

Version 5.2.0 - 3 October 2017
------------------------------
 - [security] bind PHP session cookie to specific web URI to prevent
   sharing sessions between different websites on the same host.
 - [security] Add RUNGROUP configure setting to make sure that submissions
   do not have access to group root files. (#250 thanks Richard Lobb)
 - Allow team to download testcase data marked as 'sample'.
 - Add icons to menu bars.
 - Allow to filter submissions on team, problem, language.
 - Show when a problem can not be judged on any judgehost.
 - Add "internal error" messages to deal more graceously with judgehost
   problems e.g. due to faulty compile or compare scripts.
 - Detect low disk space on judgehosts and decrease space usage.
 - Support OpenID Connect as login authentication provider.
 - Various improvements to the import/export functionality.
 - Use current contest as default when uploading problem archive.
 - Allow to add user during team creation in UI.
 - Make problem texts always downloadable for jury.
 - Decode HTML entities for proper display of error messages in
   submit client.
 - The event feed and REST API now comply with ICPC WF 2016 specs.
 - Disallow deleting a judgehost that has performed judgings,
   since the dangling reference from the judging table makes
   submissions being rejudged again.
 - Performance: merge jury and public versions of cache database
   tables into single tables. Please refresh scoreboard cache after
   upgrade.
 - Make Linux cgroups a requirement: running Java without it has
   become too painful with memory overheads, also when compiling.
 - Add 'output-limit' verdict.
 - Renamed dj-setup-database to dj_setup_database for consistency